# B4Lecture-2026

./: .gitignore  README.md
.github/workflows/: assign-pr-reviewers.yml  check_directory_name.yml  checker.yml  final_message.yml  first_message.yml  set-pr-reviewers.yml
ci/: users.csv
ex01/y_kitagawa/: ex1-1.py  ex1-2.py  ex1-3.py
ex02/y_kitagawa/: .gitignore  117093_trimmed.txt  main.py  report.md
ex03/y_kitagawa/: report.md
ex1/: README.md
ex1/d_Kinoshita/: main.py
ex1/f_terasawa/: ex01.py
ex1/j_kato/: ex1-1.py  ex1-2.py  ex1-3.py
ex1/k_nakaseko/: main.py
ex1/m_depontes/: main.py
ex1/s_teruya/: kadai1.py
ex1/t_futagami/: main.py
ex1/t_kawasaki/: README.md  main.py  pyproject.toml
ex1/undarmaa/: main.py
ex1/y_hanifmuti/: README.md  main.py  pyproject.toml
ex1/y_ishikawa/: main.py  stft.py
ex2/: README.md
ex2/d_kinoshita/: main.py
ex2/m_depontes/: main.py
ex2/s_teruya/: kadai2.py
ex2/t_futagami/: main.py  spectrogram.py
ex2/t_kawasaki/: .gitignore  README.md  ex2_task.ipynb  pyproject.toml  tracking_result.txt
ex2/y_hanifmuti/: 5.2_Soccer_Track_Challenge_2025.ipynb  Deep-EIoU-output.txt  Deep-EIoU-output_interpolated.txt  README.md  main.py  pyproject.toml
ex2/y_ishikawa/: main.py  pyproject.toml  requirements.txt  (+2 more)
ex3/: 5.2.3_Track-ID-3x3.ipynb  README.md
ex4/: 5.3_5.4_Soccer_Event_Preprocess_Modeling_OpenSTARLab.ipynb  README.md
ex5/: README.md
ex6/: 5.5_Soccer Trajectory Prediction Challenge 2025.ipynb  README.md
ex7/: 5.6_Soccer_Reinforcement_Learning_OpenSTARLab.ipynb  README.md  test_truth.csv  training.csv
(+29 files in other folders)
