[project]
name = "t-kawasaki"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "chardet>=5.2.0",
    "cython>=3.2.4",
    "cython-bbox>=0.1.5",
    "flake8>=5.0.4",
    "future>=1.0.0",
    "gdown>=5.2.2",
    "h5py>=3.11.0",
    "imageio>=2.35.1",
    "isort==4.3.21",
    "lap>=0.5.13",
    "loguru>=0.7.3",
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
    "opencv-python>=4.13.0.92",
    "pandas>=2.0.3",
    "pillow>=10.4.0",
    "pycocotools>=2.0.7",
    "scipy>=1.10.1",
    "six>=1.17.0",
    "tabulate>=0.9.0",
    "tb-nightly>=2.14.0a20230808",
    "thop>=0.1.1.post2209072238",
    "torch==1.13.0+cu116",
    "torchaudio==0.13.0",
    "torchreid",
    "torchvision==0.14.0+cu116",
    "yacs>=0.1.8",
    "yapf>=0.43.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu116"

[tool.uv.extra-build-dependencies]
torchreid = ["numpy", "setuptools", "Cython"]

[tool.uv.sources]
torchreid = { git = "https://github.com/KaiyangZhou/deep-person-reid.git" }
